# simgame

./: CMakeAddon.txt  CMakeLists.txt  build.sh  to_cpp.sh
assets/: allmtls.mt
assets/models/: .roadTile_234.obj.swp
game/: CMakeLists.txt  main.cpp
imgui/: .imgui_impl_glfw_gl3.cpp.swp  CMakeAddon.txt  CMakeLists.txt  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h
shaders/: CMakeLists.txt  bulletdebug.frag  bulletdebug.vert  gamescene.frag  gamescene.vert
src/: Assets.cpp  Assets.h  BulletDebug.cpp  BulletDebug.h  CMakeAddon.txt  CMakeLists.txt  Drawcall.cpp  Drawcall.h  Fixed.h  Font.cpp  Font.h  GameScene.cpp  GameScene.h  GameState.cpp  GameState.h  LockedQueue.cpp  LockedQueue.h  Map.cpp  Map.h  Markov.cpp  Markov.h  Material.cpp  Material.h  Model.cpp  Model.h  ModelFactory.cpp  ModelFactory.h  ModelLoader.cpp  ModelLoader.h  Object.cpp  Object.h  Physics.cpp  Physics.h  Scene.h  Server.h  Settings.cpp  Settings.h  ShaderProgram.cpp  ShaderProgram.h  StringUtils.cpp  (+12 more)
src/physics/: BoundingSphere.cpp  BoundingSphere.h
unittest/: CMakeAddon.txt  CMakeLists.txt  Fixed.cpp  physics.cpp
